Minor style upgrade

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -53,9 +53,6 @@
 				            <i class="fa fa-bars"></i>
 				        </a>
 					</div> <!-- /.col-md-12 -->
-                    <div class="col-md-3 col-sm-12">
-                    	<a href="#"><img src="{% static 'main/main_page/images/templatemo_logo.png' %}" alt="Polygon HTML5 Template"></a>
-                    </div>
 					<div class="col-md-9 main_menu">
 						<ul>
                             <li><a class="show-1 templatemo_home" href="#">
@@ -134,6 +131,131 @@
                     <p>Vivamus a purus vel ante fermentum bibendum. Sed laoreet, enim quis euismod egestas, risus tortor tincidunt lacus, in iaculis mauris lectus at augue. Donec luctus nibh nec ullamcorper feugiat.</p>
                     </div>
               </div>
+
+                <div class="templatemo_hexservices col-sm-6">
+                    <div class="blok text-center">
+                      <div class="hexagon-a">
+                         <a class="hlinktop" href="#">
+                             <div class="hexa-a">
+                                <div class="hcontainer-a">
+                              <div class="vertical-align-a">
+                                <span class="texts-a"><i class="fa fa-briefcase"></i></span>
+                              </div>
+                            </div>
+                             </div>
+                         </a>
+                      </div>
+                         <div class="hexagonservices">
+                            <a class="hlinkbott" href="#">
+                            <div class="hexa">
+                              <div class="hcontainer">
+                              <div class="vertical-align">
+                              <span class="texts"></span>
+                              </div>
+                            </div>
+                          </div>
+                            </a>
+                         </div>
+                         </div>
+                         <div class="templatemo_servicetext">
+                        <h3>Aliquam faucibus</h3>
+                        <p>Vivamus a purus vel ante fermentum bibendum. Sed laoreet, enim quis euismod egestas, risus tortor tincidunt lacus, in iaculis mauris lectus at augue. Donec luctus nibh nec ullamcorper feugiat.</p>
+                        </div>
+                  </div>
+
+                <div class="templatemo_hexservices col-sm-6">
+                    <div class="blok text-center">
+                      <div class="hexagon-a">
+                         <a class="hlinktop" href="#">
+                             <div class="hexa-a">
+                                <div class="hcontainer-a">
+                              <div class="vertical-align-a">
+                                <span class="texts-a"><i class="fa fa-briefcase"></i></span>
+                              </div>
+                            </div>
+                             </div>
+                         </a>
+                      </div>
+                         <div class="hexagonservices">
+                            <a class="hlinkbott" href="#">
+                            <div class="hexa">
+                              <div class="hcontainer">
+                              <div class="vertical-align">
+                              <span class="texts"></span>
+                              </div>
+                            </div>
+                          </div>
+                            </a>
+                         </div>
+                         </div>
+                         <div class="templatemo_servicetext">
+                        <h3>Aliquam faucibus</h3>
+                        <p>Vivamus a purus vel ante fermentum bibendum. Sed laoreet, enim quis euismod egestas, risus tortor tincidunt lacus, in iaculis mauris lectus at augue. Donec luctus nibh nec ullamcorper feugiat.</p>
+                        </div>
+                  </div>
+
+                <div class="templatemo_hexservices col-sm-6">
+                    <div class="blok text-center">
+                      <div class="hexagon-a">
+                         <a class="hlinktop" href="#">
+                             <div class="hexa-a">
+                                <div class="hcontainer-a">
+                              <div class="vertical-align-a">
+                                <span class="texts-a"><i class="fa fa-briefcase"></i></span>
+                              </div>
+                            </div>
+                             </div>
+                         </a>
+                      </div>
+                         <div class="hexagonservices">
+                            <a class="hlinkbott" href="#">
+                            <div class="hexa">
+                              <div class="hcontainer">
+                              <div class="vertical-align">
+                              <span class="texts"></span>
+                              </div>
+                            </div>
+                          </div>
+                            </a>
+                         </div>
+                         </div>
+                         <div class="templatemo_servicetext">
+                        <h3>Aliquam faucibus</h3>
+                        <p>Vivamus a purus vel ante fermentum bibendum. Sed laoreet, enim quis euismod egestas, risus tortor tincidunt lacus, in iaculis mauris lectus at augue. Donec luctus nibh nec ullamcorper feugiat.</p>
+                        </div>
+                  </div>
+
+                <div class="templatemo_hexservices col-sm-6">
+                    <div class="blok text-center">
+                      <div class="hexagon-a">
+                         <a class="hlinktop" href="#">
+                             <div class="hexa-a">
+                                <div class="hcontainer-a">
+                              <div class="vertical-align-a">
+                                <span class="texts-a"><i class="fa fa-briefcase"></i></span>
+                              </div>
+                            </div>
+                             </div>
+                         </a>
+                      </div>
+                         <div class="hexagonservices">
+                            <a class="hlinkbott" href="#">
+                            <div class="hexa">
+                              <div class="hcontainer">
+                              <div class="vertical-align">
+                              <span class="texts"></span>
+                              </div>
+                            </div>
+                          </div>
+                            </a>
+                         </div>
+                         </div>
+                         <div class="templatemo_servicetext">
+                        <h3>Aliquam faucibus</h3>
+                        <p>Vivamus a purus vel ante fermentum bibendum. Sed laoreet, enim quis euismod egestas, risus tortor tincidunt lacus, in iaculis mauris lectus at augue. Donec luctus nibh nec ullamcorper feugiat.</p>
+                        </div>
+                  </div>
+
         </div>
     </div>
     </div>
@@ -160,11 +282,6 @@
                                     </div>
                                     </a>
 
-                                    <a href="#rs">
-                                     <div class="smallhexagon">
-                                       <span class="fa fa-rss"></span>
-                                    </div>
-                                    </a>
                                 </div>
                                 <div class="clear"></div>
                                	<div class="overlay templatemo_overlaytxt">Phasellus interdum</div>
@@ -190,11 +307,6 @@
                                     <a href="https://vk.com/semby">
                                      <div class="smallhexagon">
                                        <span class="fa fa-vk"></span>
-                                    </div>
-                                    </a>
-                                    <a href="#rs">
-                                     <div class="smallhexagon">
-                                       <span class="fa fa-rss"></span>
                                     </div>
                                     </a>
                                 </div>
@@ -230,11 +342,6 @@
                                        <span class="fa fa-vk"></span>
                                     </div>
                                     </a>
-                                    <a href="#rs">
-                                     <div class="smallhexagon">
-                                       <span class="fa fa-rss"></span>
-                                    </div>
-                                    </a>
                                 </div>
 
                                 <div class="clear"></div>
@@ -261,11 +368,6 @@
                                     <a href="https://vk.com/semby">
                                      <div class="smallhexagon">
                                        <span class="fa fa-vk"></span>
-                                    </div>
-                                    </a>
-                                    <a href="#rs">
-                                     <div class="smallhexagon">
-                                       <span class="fa fa-rss"></span>
                                     </div>
                                     </a>
                                 </div>
@@ -298,7 +400,7 @@
                 <img src="{% static 'main/main_page/images/templatemo_contactiframe.png' %}" alt="contact map">
                 </div>
                 </div>
-            <div class="col-md-3 col-sm-12 leftalign">
+            <div class="col-md-3 col-sm-12 rightalign">
             	<div class="templatemo_contacttitle">Contact Information</div>
                 <div class="clear"></div>
                 <div class="templatemo_address">
