--- a/static/main/main_page/css/templatemo_style.css
+++ b/static/main/main_page/css/templatemo_style.css
@@ -743,4 +743,4 @@ and (max-width : 559px)	{
  }
 .content { display: none; height: auto; }
 .homepage	{ display: block; }
-.leftalign	{ float: left; }
+.rightalign	{ float: right;}
