Done with main page

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -70,11 +70,11 @@
                     </label>
                       <span class="txt1">
                         Я принимаю условия
-                        <a href="/about" class="txt2 hov1">
+                        <a href="" class="txt2 hov1">
                           Пользовательского соглашения
                         </a>
                         и даю свое согласие на обработку моей персональной информации на условиях, определенных
-                        <a href="/about" class="txt2 hov1">
+                        <a href="" class="txt2 hov1">
                           Политикой конфиденциальности.
                         </a>
                       </span>
