--- a/static/authorization/css/login_style_auth.css
+++ b/static/authorization/css/login_style_auth.css
@@ -1,9 +1,10 @@
-body{
-	margin: 0;
+body {
 	font-family: 'Roboto', sans-serif;
-    background: linear-gradient(to bottom right, #585858, #111111);
-    background-attachment: fixed;
+    color: #ffffff; /* Белый текст */
+    background: #343536; /* Темно-серый фон */
+    font-size: 12px;
 }
+
 section{
 	width: 1440px;
     margin-left: auto;
@@ -33,7 +34,7 @@ section div.menu a:hover img{
 section div.menu h1{
 	padding-top: 65px;
 	text-align: center;
-	color: #F0A24D;
+	color: #b69e40;
 	font-size: 64px;
 	font-weight: 400;
 }
@@ -41,7 +42,7 @@ section div.limiter{
 	margin-top: 62.5px;
 	width: 544px;
 	height: 300px;
-	border: 2px solid #F0A24D;
+	border: 2px solid #b69e40;
 	border-radius: 4px;
 	margin-left: auto;
     margin-right: auto;
@@ -61,7 +62,7 @@ section div.limiter{
 
 .txt3{
     font-size: 26px;
-    color: #F0A24D;
+    color: #b69e40;
     line-height: 1;
 	font-weight: lighter;
 	text-decoration: none;  
@@ -78,7 +79,7 @@ section div.limiter{
     left: 0;
     right: 0;    
     height: 1px;
-    background-color: #F0A24D;
+    background-color: #343536;
 }
 
 input {
@@ -99,7 +100,7 @@ input {
     background: 0 0;
     font-size: 32px;
     font-weight: normal;
-    color: #fff;
+    color: #ffffff;
     padding: 0 2px
 }
 .eye{
@@ -118,14 +119,14 @@ input {
     display: block;
 	text-align: center;
 	text-decoration: none;
-	background: #F0A24D;
+	background: #b69e40;
 	width: 378px;
     height: 75px;
 	border-radius: 26px;
 	font-size: 32px;
     font-weight: 500;
     text-transform: uppercase;
-	color: #000;
+	color: #ffffff;
 	margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
@@ -133,5 +134,5 @@ input {
 }
 .wrap-login100-form-btn button:hover{
     background: none;
-    color: #F0A24D;
+    color: #b69e40;
 }
