--- a/static/my_account/css/prof_style_acc.css
+++ b/static/my_account/css/prof_style_acc.css
@@ -44,7 +44,7 @@ div.lk h1{
     font-weight: 400;
     font-size: 64px;
     line-height: 75px;
-    color: #F0A24D;
+    color: #b69e40;
 }
 div.about{
     position: relative;
@@ -68,7 +68,7 @@ section div.me{
     width: 700px;
     height: 295px;
     margin-left: calc(50% - 700px/2);
-    border: 2px solid #F0A24D;
+    border: 2px solid #b69e40;
     border-radius: 4px;
     padding: 0;
 }
@@ -123,7 +123,7 @@ section div.my_appointment{
     margin-left: calc(50% - 693px/2);
     margin-top: 30px;
     margin-bottom: 0;
-    border: 2px solid #F0A24D;
+    border: 2px solid #b69e40;
     border-radius: 4px;
     padding: 0;
 }
@@ -157,7 +157,7 @@ div.exit a{
     line-height: 30.47px;
     text-decoration-line: none;
     text-align: center;
-    color: #F0A24D;
+    color: #b69e40;
 }
 div.exit a:hover{
     text-decoration-line: underline;
