Minor update in authorization

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -83,7 +83,7 @@
                 <div class="container-login100-form-btn">
                   <div class="wrap-login100-form-btn">
                     <button class="login100-form-btn" type="submit">
-                    Регистрация
+                    РЕГИСТРИЦИЯ
                     </button>
                   </div>
                 </div>
