--- a/static/registration/css/reg_style_rg.css
+++ b/static/registration/css/reg_style_rg.css
@@ -145,7 +145,7 @@ input {
 	border-radius: 26px;
 	font-size: 26px;
     font-weight: 500;
-	color: #000;
+	color: #ffffff;
 	margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
