Add first simple view api

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -75,7 +75,7 @@
                     {% else %}
                         <p>Статус админа не подтвержден</p>
                         <div class="files_list">
-                        <a href="/csv_service/api/" style="color: #b69e40;">Просмотр файлов</a>
+                        <a href="/csv_service/api/csvfiles/" style="color: #b69e40;">Просмотр файлов</a>
                         </div>
                     {% endif %}
                     </div>
